--- a/index.html
+++ b/index.html
@@ -698,6 +698,7 @@
     <script src="settings.js"></script>
     <script src="events.js"></script>
     <script src="version.js"></script>
+    <script src="deviceInfo.js"></script>
     <script src="creatorshoutouts.js"></script>
 </body>
 </html>                
