--- a/settings.html
+++ b/settings.html
@@ -47,19 +47,10 @@
                         </label>
                     </div>
 
-                    <!-- Adjustable Text Size -->
-                    <div class="setting-card">
-                        <div class="setting-label">
-                            <h3 class="setting-title">Text Size</h3>
-                            <p class="setting-description">Adjust the text size for better readability</p>
-                        </div>
-                        <label for="text-size">Text Size:</label>
-                        <select id="text-size" onchange="adjustTextSize(this.value)" aria-label="Select text size">
-                            <option value="default">Default</option>
-                            <option value="large">Large</option>
-                            <option value="larger">Larger</option>
-                        </select>
-                    </div>
+                <div class="settings-group">
+                <!-- Appearance Section -->
+                <div class="settings-subsection">
+                    <h2 class="subsection-title">Accessibility</h2>
 
                     <!-- Disable Focus Outline -->
                     <div class="setting-card">
@@ -71,6 +62,20 @@
                             <input type="checkbox" id="focusOutlineToggle">
                             <span class="toggle-slider"></span>
                         </label>
+                    </div>
+
+                <!-- Adjustable Text Size -->
+                    <div class="setting-card">
+                        <div class="setting-label">
+                            <h3 class="setting-title">Text Size</h3>
+                            <p class="setting-description">Adjust the text size for better readability</p>
+                        </div>
+                        <label for="text-size">Text Size:</label>
+                        <select id="text-size" onchange="adjustTextSize(this.value)" aria-label="Select text size">
+                            <option value="default">Default</option>
+                            <option value="large">Large</option>
+                            <option value="larger">Larger</option>
+                        </select>
                     </div>
                 </div>
 
