--- a/settings.html
+++ b/settings.html
@@ -63,6 +63,7 @@
                             <span class="toggle-slider"></span>
                         </label>
                     </div>
+                </div>
 
                 <!-- Adjustable Text Size -->
                     <div class="setting-card">
