--- a/settings.html
+++ b/settings.html
@@ -78,6 +78,47 @@
                 </div>
             </div>
 
+             <!-- Disability Section -->
+        <section class="settings-section">
+            <div class="settings-header">
+                <h1>Disability Profiles</h1>
+            </div>
+            <div class="settings-group">
+                <div class="setting-card">
+                    <div class="setting-label">
+                        <p class="setting-title">Vision Impaired Profile</p>
+                        <p class="setting-description">Enhances the website's visuals.</p>
+                    </div>
+                    <label class="toggle-switch">
+                        <input type="checkbox" id="vision-impaired-toggle">
+                        <span class="toggle-slider"></span>
+                    </label>
+                </div>
+
+                <div class="setting-card">
+                    <div class="setting-label">
+                        <p class="setting-title">ADHD Friendly Profile</p>
+                        <p class="setting-description">More focus & fewer distractions.</p>
+                    </div>
+                    <label class="toggle-switch">
+                        <input type="checkbox" id="adhd-friendly-toggle">
+                        <span class="toggle-slider"></span>
+                    </label>
+                </div>
+
+                <div class="setting-card">
+                    <div class="setting-label">
+                        <p class="setting-title">Autism Friendly Profile</p>
+                        <p class="setting-description">Enhances the website for people with autism.</p>
+                    </div>
+                    <label class="toggle-switch">
+                        <input type="checkbox" id="autism-friendly-toggle">
+                        <span class="toggle-slider"></span>
+                    </label>
+                </div>
+            </div>
+        </section>
+
             <!-- Owner Only Settings Section -->
             <div class="settings-subsection owner-only">
                 <h2 class="subsection-title">Owner Only Settings</h2>
