--- a/merchandise.html
+++ b/merchandise.html
@@ -118,139 +118,37 @@
         <section id="all-products">
             <div class="section-header">
                 <h2>All Products</h2>
-                <span class="product-count">(6)</span>
+                <span class="product-count">(0)</span>
             </div>
             <div class="product-grid">
-                <!-- Example Product Item -->
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="product_images/beanie-hat.jpg" alt="Product 1">
-                    <h3>Beanie Hat</h3>
-                    <p class="price">$17.48</p>
-                    <p class="quantity">Quantity: 999+</p>
-                    <a href="https://rivers-merch-store.printify.me/product/14064378/beanie-hat?category=kids-clothing" class="buy-now">Buy Now</a>
-                </div>
-
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="product_images/onesie-organic-baby-bodysuit.jpg" alt="Product 2">
-                    <h3>Onesie® Organic Baby Bodysuit</h3>
-                    <p class="price">$27.83</p>
-                    <p class="quantity">Quantity: 999+</p>
-                    <a href="https://rivers-merch-store.printify.me/product/14064377/onesie-organic-baby-bodysuit?category=kids-clothing" class="buy-now">Buy Now</a>
-                </div>
-
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="product_images/short-sleeve-t-shirt.jpg" alt="Product 3">
-                    <h3>Short Sleeve T-Shirt</h3>
-                    <p class="price">$13.73</p>
-                    <p class="quantity">Quantity: 999+</p>
-                    <a href="https://rivers-merch-store.printify.me/product/13858835/short-sleeve-t-shirt?category=kids-clothing" class="buy-now">Buy Now</a>
-                </div>
-
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="product_images/infant-fine-jersey-tee.jpg" alt="Product 4">
-                    <h3>Infant Fine Jersey Tee</h3>
-                    <p class="price">$20.22</p>
-                    <p class="quantity">Quantity: 999+</p>
-                    <a href="https://rivers-merch-store.printify.me/product/13853306/infant-fine-jersey-tee?category=kids-clothing" class="buy-now">Buy Now</a>
-                </div>
-
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="product_images/1-school-bus-driver-iphone-tough-case.jpg" alt="Product 5">
-                    <h3>#1 School Bus Driver iPhone Tough Case</h3>
-                    <p class="price">$15.99</p>
-                    <p class="quantity">Quantity: 999+</p>
-                    <a href="https://rivers-merch-store.printify.me/product/15486390/1-school-bus-driver-iphone-tough-case?category=accessories" class="buy-now">Buy Now</a>
-                </div>
-
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="product_images/bus-army-impact-resistant-cases-for-samsung-and-apple.jpg" alt="Product 6">
-                    <h3>Bus Army Impact Resistant Cases for Samsung and Apple</h3>
-                    <p class="price">$27.99 - $24.99</p>
-                    <p class="quantity">Quantity: 999+</p>
-                    <a href="https://rivers-merch-store.printify.me/product/15486389/bus-army-impact-resistant-cases-for-samsung-and-apple?category=accessories" class="buy-now">Buy Now</a>
-                </div>
-                <!-- More Product Items -->
+                <!-- Product items go here -->
             </div>
+            <!-- Message for no products on sale -->
+            <div class="no-sale-message">No products listed. Check back later!</div>
         </section>
 
         <section id="accessories">
             <div class="section-header">
                 <h2>Accessories</h2>
-                <span class="product-count">(2)</span>
+                <span class="product-count">(0)</span>
             </div>
             <div class="product-grid">
-                <!-- Example Product Item -->
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="product_images/1-school-bus-driver-iphone-tough-case.jpg" alt="Product 5">
-                    <h3>#1 School Bus Driver iPhone Tough Case</h3>
-                    <p class="price">$15.99</p>
-                    <p class="quantity">Quantity: 999+</p>
-                    <a href="https://rivers-merch-store.printify.me/product/15486390/1-school-bus-driver-iphone-tough-case?category=accessories" class="buy-now">Buy Now</a>
-                </div>
-
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="product_images/bus-army-impact-resistant-cases-for-samsung-and-apple.jpg" alt="Product 6">
-                    <h3>Bus Army Impact Resistant Cases for Samsung and Apple</h3>
-                    <p class="price">$27.99 - $24.99</p>
-                    <p class="quantity">Quantity: 999+</p>
-                    <a href="https://rivers-merch-store.printify.me/product/15486389/bus-army-impact-resistant-cases-for-samsung-and-apple?category=accessories" class="buy-now">Buy Now</a>
-                </div>
-            <!-- More Product Items -->
+                <!-- Product items go here -->
             </div>
+            <!-- Message for no products on sale -->
+            <div class="no-sale-message">No accessories listed. Check back later!</div>
         </section>
 
         <section id="kids">
             <div class="section-header">
                 <h2>Kids</h2>
-                <span class="product-count">(4)</span>
+                <span class="product-count">(0)</span>
              </div>
              <div class="product-grid">
-                <!-- Product Item -->
-                <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="product_images/beanie-hat.jpg" alt="Product 1">
-                    <h3>Beanie Hat</h3>
-                    <p class="price">$17.48</p>
-                    <p class="quantity">Quantity: 999+</p>
-                    <a href="https://rivers-merch-store.printify.me/product/14064378/beanie-hat?category=kids-clothing" class="buy-now">Buy Now</a>
-                </div>
-
-                 <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="product_images/onesie-organic-baby-bodysuit.jpg" alt="Product 2">
-                    <h3>Onesie® Organic Baby Bodysuit</h3>
-                    <p class="price">$27.83</p>
-                    <p class="quantity">Quantity: 999+</p>
-                    <a href="https://rivers-merch-store.printify.me/product/14064377/onesie-organic-baby-bodysuit?category=kids-clothing" class="buy-now">Buy Now</a>
-                </div>
-
-                 <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="product_images/short-sleeve-t-shirt.jpg" alt="Product 3">
-                    <h3>Short Sleeve T-Shirt</h3>
-                    <p class="price">$13.73</p>
-                    <p class="quantity">Quantity: 999+</p>
-                    <a href="https://rivers-merch-store.printify.me/product/13858835/short-sleeve-t-shirt?category=kids-clothing" class="buy-now">Buy Now</a>
-                </div>
-
-                 <div class="product-item">
-                    <div class="stock-ribbon in-stock">In Stock</div>
-                    <img src="product_images/infant-fine-jersey-tee.jpg" alt="Product 4">
-                    <h3>Infant Fine Jersey Tee</h3>
-                    <p class="price">$20.22</p>
-                    <p class="quantity">Quantity: 999+</p>
-                    <a href="https://rivers-merch-store.printify.me/product/13853306/infant-fine-jersey-tee?category=kids-clothing" class="buy-now">Buy Now</a>
-                </div>
-                <!-- More Product Items -->
+                <!-- Product items go here -->
             </div>
+            <!-- Message for no products on sale -->
+            <div class="no-sale-message">No Kids Products listed. Check back later!</div>
         </section>
 
         <section id="home-living">
