--- a/merchandise.html
+++ b/merchandise.html
@@ -53,10 +53,12 @@
             <li><a href="#popular">Popular</a></li>
             <li><a href="#all-products">All Products</a></li>
             <li><a href="#accessories">Accessories</a></li>
-            <li><a href="#kids">Kids</a></li>
-            <li><a href="#home-living">Home & Living</a></li>
-            <li><a href="#men">Men</a></li>
-            <li><a href="#women">Women</a></li>
+            <li><a href="#baby-and-toddler">Baby & Toddler</a></li>
+            <li><a href="#kitchenwear">Kitchenwear</a></li>
+            <li><a href="#hats">Hats</a></li>
+            <li><a href="#hoodies-and-sweatshirts">Hoodies & Sweatshirts</a></li>
+            <li><a href="#outdoor">Outdoors</a></li>
+            <li><a href="#t-shirts">T-Shirts</a></li>
         </ul>
     </nav>
 
@@ -139,52 +141,76 @@
             <div class="no-sale-message">No accessories listed. Check back later!</div>
         </section>
 
-        <section id="kids">
+        <section id="baby-and-toddler">
             <div class="section-header">
-                <h2>Kids</h2>
+                <h2>Baby & Toddler</h2>
                 <span class="product-count">(0)</span>
              </div>
              <div class="product-grid">
                 <!-- Product items go here -->
             </div>
             <!-- Message for no products on sale -->
-            <div class="no-sale-message">No Kids Products listed. Check back later!</div>
+            <div class="no-sale-message">No Baby & Toddler Products listed. Check back later!</div>
         </section>
 
-        <section id="home-living">
+        <section id="kitchenwear">
             <div class="section-header">
-                <h2>Home & Living</h2>
+                <h2>Kitchenwear</h2>
                 <span class="product-count">(0)</span>
             </div>
             <div class="product-grid">
                 <!-- Product items go here -->
             </div>
             <!-- Message for no home & living products -->
-            <div class="no-sale-message">No products are currently in home & living. Check back later!</div>
+            <div class="no-sale-message">No products are currently in kitchenwear. Check back later!</div>
         </section>
 
-        <section id="men">
+        <section id="hats">
             <div class="section-header">
-                <h2>Men</h2>
+                <h2>Hats</h2>
                 <span class="product-count">(0)</span>
             </div>
             <div class="product-grid">
                 <!-- Product items go here -->
             </div>
             <!-- Message for no men products -->
-            <div class="no-sale-message">No products are currently in men. Check back later!</div>
+            <div class="no-sale-message">No products are currently in hats. Check back later!</div>
         </section>
 
-        <section id="women">
+        <section id="hoodies-and-sweatshirts">
             <div class="section-header">
-                <h2>Women</h2>
+                <h2>Hoodies & Sweatshirts</h2>
                 <span class="product-count">(0)</span>
             </div>
             <div class="product-grid">
                 <!-- Product items go here -->
             </div>
             <!-- Message for no women products -->
-            <div class="no-sale-message">No products are currently in women. Check back later!</div>
+            <div class="no-sale-message">No products are currently in Hoodies & Sweatshirts. Check back later!</div>
+        </section>
+
+        <section id="outdoor">
+            <div class="section-header">
+                <h2>Outdoors</h2>
+                <span class="product-count">(0)</span>
+            </div>
+            <div class="product-grid">
+                <!-- Product items go here -->
+            </div>
+            <!-- Message for no women products -->
+            <div class="no-sale-message">No products are currently in Outdoors. Check back later!</div>
+        </section>
+
+        <section id="t-shirts">
+            <div class="section-header">
+                <h2>T-Shirts</h2>
+                <span class="product-count">(0)</span>
+            </div>
+            <div class="product-grid">
+                <!-- Product items go here -->
+            </div>
+            <!-- Message for no women products -->
+            <div class="no-sale-message">No products are currently in T-Shirts. Check back later!</div>
         </section>
 
         <footer>
