--- a/merchandise.html
+++ b/merchandise.html
@@ -132,13 +132,36 @@
         <section id="accessories">
             <div class="section-header">
                 <h2>Accessories</h2>
-                <span class="product-count">(0)</span>
+                <span class="product-count">(3)</span>
             </div>
             <div class="product-grid">
-                <!-- Product items go here -->
-            </div>
-            <!-- Message for no products on sale -->
-            <div class="no-sale-message">No accessories listed. Check back later!</div>
+                <!-- Example Product Item -->
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <img src="product_images/autism.webp" alt="Product 1">
+                    <h3>Autism Awareness AirPods Case®</h3>
+                    <p class="price">$25.00</p>
+                    <p class="quantity">Quantity: Unlimited</p>
+                    <a href="https://riverkritzar-shop.fourthwall.com/products/autism-awareness-airpods-case" class="buy-now">Buy Now</a>
+                </div>
+
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <img src="product_images/adhd.webp" alt="Product 2">
+                    <h3>ADHD Awareness Ribbon iPhone® Case</h3>
+                    <p class="price">$21.00</p>
+                    <p class="quantity">Quantity: Unlimited</p>
+                    <a href="https://riverkritzar-shop.fourthwall.com/products/adhd-awareness-ribbon-iphone-case" class="buy-now">Buy Now</a>
+                </div>
+                
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <img src="product_images/adhd-pin.webp" alt="Product 3">
+                    <h3>ADHD Awareness Ribbon Pin Set</h3>
+                    <p class="price">$14.00</p>
+                    <p class="quantity">Quantity: Unlimited</p>
+                    <a href="https://riverkritzar-shop.fourthwall.com/products/adhd-awareness-ribbon-pin-set" class="buy-now">Buy Now</a>
+                </div>
         </section>
 
         <section id="baby-and-toddler">
