--- a/merchandise.html
+++ b/merchandise.html
@@ -241,10 +241,17 @@
                 <span class="product-count">(0)</span>
             </div>
             <div class="product-grid">
-                <!-- Product items go here -->
-            </div>
-            <!-- Message for no women products -->
-            <div class="no-sale-message">No products are currently in Outdoors. Check back later!</div>
+                <!-- Example Product Item -->
+                <div class="product-item">
+                    <div class="stock-ribbon in-stock">In Stock</div>
+                    <div class="sale-ribbon">Sale</div> <!-- Sale Ribbon -->
+                    <img src="product_images/autism-flag.webp" alt="Product 1">
+                    <h3>Autism Awareness All-Over Flag®</h3>
+                    <p class="original-price"><s>$32.00</s></p> <!-- Original price crossed out -->
+                    <p class="sale-price">$24.00</p> <!-- Sale price -->
+                    <p class="quantity">Quantity: Unlimited</p>
+                    <a href="https://riverkritzar-shop.fourthwall.com/en-usd/products/autism-awareness-all-over-flag" class="buy-now">Buy Now</a>
+                </div>
         </section>
 
         <section id="t-shirts">
