--- a/merchandise.html
+++ b/merchandise.html
@@ -14,7 +14,9 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-E0RSQS1MS7"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() {
+            dataLayer.push(arguments);
+        }
         gtag('js', new Date());
         gtag('config', 'G-E0RSQS1MS7');
     </script>
@@ -42,6 +44,7 @@
         <p>© <span id="current-year"></span> Bus Army Dude. All Rights Reserved.</p>
     </footer>
 
+    <!-- Include the JavaScript that controls the page -->
     <script src="merchandise.js"></script>
     <script src="common.js"></script>
     <script src="script.js"></script>
