--- a/merchandise.html
+++ b/merchandise.html
@@ -32,17 +32,15 @@
         </div>
     </header>
 
-    <nav class="category-nav" id="category-nav">
-        <!-- Categories will be populated here dynamically -->
-    </nav>
+        <ul id="category-nav"></ul>
+<!-- Categories will be populated here dynamically -->
 
-    <div class="container" id="product-container">
-        <!-- Product sections will be populated here dynamically -->
-    </div>
+<div id="product-container"></div>
+<!-- Product sections will be populated here dynamically -->
 
-    <footer>
-        <p>© <span id="current-year"></span> Bus Army Dude. All Rights Reserved.</p>
-    </footer>
+<footer>
+    <p>© <span id="current-year"></span> Bus Army Dude. All Rights Reserved.</p>
+</footer>
 
     <!-- Include the JavaScript that controls the page -->
     <script src="merchandise.js"></script>
