--- a/merchandise.html
+++ b/merchandise.html
@@ -32,15 +32,22 @@
         </div>
     </header>
 
-        <ul id="category-nav"></ul>
-<!-- Categories will be populated here dynamically -->
+         <!-- Navigation for categories -->
+    <nav>
+        <ul id="category-nav">
+            <!-- Categories will be populated here dynamically -->
+        </ul>
+    </nav>
 
-<div id="product-container"></div>
-<!-- Product sections will be populated here dynamically -->
+    <!-- Product sections will be populated here dynamically -->
+    <div id="product-container">
+        <!-- Products will be dynamically inserted here by JavaScript -->
+    </div>
 
-<footer>
-    <p>© <span id="current-year"></span> Bus Army Dude. All Rights Reserved.</p>
-</footer>
+    <!-- Footer with current year -->
+    <footer>
+        <p>© <span id="current-year"></span> Bus Army Dude. All Rights Reserved.</p>
+    </footer>
 
     <!-- Include the JavaScript that controls the page -->
     <script src="merchandise.js"></script>
