--- a/merchandise.html
+++ b/merchandise.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="ai-features.css">
     <link rel="stylesheet" href="settings.css">
     <meta http-equiv="refresh" content="300">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval';">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-E0RSQS1MS7"></script>
