--- a/merchandise.html
+++ b/merchandise.html
@@ -9,19 +9,14 @@
     <link rel="stylesheet" href="ai-features.css">
     <link rel="stylesheet" href="settings.css">
     <meta http-equiv="refresh" content="300">
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval';">
+
+    <!-- Content-Security-Policy allowing necessary resources -->
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://www.googletagmanager.com; connect-src 'self' https://storefront-api.fourthwall.com; img-src 'self' data: https://your-image-source.com;">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-E0RSQS1MS7"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-        gtag('config', 'G-E0RSQS1MS7');
-    </script>
-    
+    <script src="analytics.js"></script>
+
     <!-- Favicons and Icons -->
     <link rel="icon" href="images/favicon-32x32.png" type="image/png" />
 </head>
@@ -33,7 +28,7 @@
         </div>
     </header>
 
-         <!-- Navigation for categories -->
+    <!-- Navigation for categories -->
     <nav>
         <ul id="category-nav">
             <!-- Categories will be populated here dynamically -->
